--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@mdi/font": "5.9.55",
+    "pinia": "^2.0.22",
     "roboto-fontface": "*",
     "vue": "^3.2.37",
+    "vue-router": "^4.1.5",
     "vuetify": "npm:@vuetify/nightly@next",
     "webfontloader": "^1.0.0"
   },
