--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "preview": "vite preview",
     "lint": "eslint --fix src/*.{ts,vue} && eslint --fix src/**/*.{ts,vue}",
     "format": "prettier -w src/*.{ts,vue} && prettier -w src/**/*.{ts,vue}",
-    "fix": "yarn format && yarn lint"  
+    "fix": "yarn format && yarn lint"
   },
   "dependencies": {
     "@mdi/font": "5.9.55",
@@ -19,6 +19,7 @@
     "eslint": "^8.24.0",
     "eslint-plugin-vue": "^9.5.1",
     "pinia": "^2.0.22",
+    "pinia-plugin-persistedstate-2": "^2.0.1",
     "roboto-fontface": "*",
     "vue": "^3.2.37",
     "vue-router": "^4.1.5",
